# ladybird

./: .gitattributes  .gitignore  =1.24.0  =2.28.0  CMakeLists.txt  INSTALL_MACOS.md  README.md  TEST_RESULTS.md  WARP.md  build_ladybird.sh  build_logs_new.txt  build_output.txt  build_output2.txt  build_output3.txt  build_output4.txt  python_demo.html  test_compilation.sh  test_python.html  test_python_bindings.py  vcpkg.json
.github/: FUNDING.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  ci-windows.yml  nightly-lagom.yml  python-tests.yml  release-builds.yml
Libraries/: CMakeLists.txt
Libraries/LibWeb/: CMakeLists.txt  CMakeLists.txt.patch  ForwardPython.h
Libraries/LibWeb/Bindings/: MainThreadVM.cpp  MainThreadVM.h  OptionalPythonJSBridge.cpp  OptionalPythonJSBridge.h  PythonCompat.h  PythonDOMBindings.cpp  PythonDOMBindings.cpp.fix  PythonDOMBindings.h  PythonDOMBindings.h.fix  PythonDOMWrapperCache.h  PythonJSBridge.cpp  PythonJSBridge.cpp.fix  PythonJSBridge.h  PythonJSObjectWrapper.cpp  PythonJSObjectWrapper.cpp.fix  PythonJSObjectWrapper.h  PythonObjectBridge.cpp  PythonObjectBridge.h  PythonPlatform.h  PythonWebModule.cpp  PythonWebModule.h  TestPythonDOMModule.cpp  TestPythonDOMModule.h  opencode.py
Libraries/LibWeb/DOM/: Document.cpp  Document.h  Document.h.patch
Libraries/LibWeb/HTML/: HTMLScriptElement.cpp  HTMLScriptElement.h
Libraries/LibWeb/HTML/Scripting/: Fetching.cpp  Fetching.h  IndependentPythonEngine.cpp  IndependentPythonEngine.cpp.bak  IndependentPythonEngine.h  IndependentPythonEngine.h.fix  PythonDebugHelpers.h  PythonEngine.cpp  PythonEngine.h  PythonError.cpp  PythonError.h  PythonPackageManager.cpp  PythonPackageManager.h  PythonPerformanceMetrics.cpp  PythonPerformanceMetrics.h  PythonScript.cpp  PythonScript.h  PythonSecurityModel.cpp  PythonSecurityModel.h  PythonStdLib.cpp  PythonStdLib.h
Libraries/LibWebView/: CMakeLists.txt
Meta/: find_compiler.py
Meta/CMake/: FindPythonPlatform.cmake  common_options.cmake
Meta/CMake/vcpkg/: generate_vcpkg_toolchain_variables.cmake
Meta/CMake/vcpkg/overlay-ports/angle/: portfile.cmake
Services/WebContent/: CMakeLists.txt  main.cpp
Tests/Python/: PythonIntegrationTest.cpp  PythonIntegrationTest.h  TestPythonIntegration.cpp
Toolchain/: BuildVcpkg.py
UI/: CMakeLists.txt
UI/AppKit/: CMakeLists.txt
UI/AppKit/Interface/: LadybirdWebView.mm
UI/Qt/: CMakeLists.txt
UI/cmake/: BundlePython.cmake  FixPythonBundle.cmake  InstallRules.cmake
benchmarks/: CMakeLists.txt  python_benchmark.cpp
docs/: README.md
docs/python_integration/: API_STATUS.md  README.md  api_reference.md  architecture.md  architecture_overview.md  build_fixes.md  build_system.md  cross_language_bridge.md  cross_language_communication.md  dom_api_reference.md  dom_bindings.md  implementation.md  implementation_details.md  integration_summary.md  overview.md  performance.md  performance_optimization.md  python_object_bridge.md  python_web_module.md  roadmap.md  roadmap_goals.md  security.md  security_model.md  test_python_dom_module.md  testing.md  testing_strategy.md
ladybird-build/lib/: liblagom-ak.so.0  liblagom-compress.so.0  liblagom-core.so.0.0.0  liblagom-coreminimal.so.0.0.0  liblagom-database.so.0.0.0  liblagom-dns.so.0.0.0  liblagom-gfx.so.0  liblagom-imagedecoderclient.so.0  liblagom-ipc.so.0  liblagom-js.so.0.0.0  liblagom-line.so.0  liblagom-regex.so.0  liblagom-syntax.so.0  liblagom-textcodec.so.0.0.0  liblagom-threading.so.0.0.0  liblagom-unicode.so.0  liblagom-url.so.0  liblagom-wasm.so.0.0.0  liblagom-webview.so.0
ladybird_py/: __init__.py  aiohttp.py  bridge.py  net.py  pip_lite.py  requests.py
ladybird_py/backends/: __init__.py  urllib_backend.py
logs_48948622535/: 0_ladybird-build-linux.txt  1_ladybird-build-macos.txt
logs_48948622535/ladybird-build-linux/: system.txt
logs_48948622535/ladybird-build-macos/: system.txt
opencode/cascade/: python_integration.md
opencode/grok/docs/: ARCHITECTURE.md  FUTURE_PLANS.md  IMPLEMENTATION_STATUS.md  INNOVATIONS.md  PERFORMANCE.md  README.md  REQUIREMENTS.md  TECHNOLOGIES.md
python_tests/: FIXES.md  README.md  comprehensive_test.html  demo_script.py  external_library_demo.html  external_package_test.html  external_script_demo.html  index.html  python_advanced_test.html  python_basic_test.html  python_dom_test.html  python_package_test.html  requirements.txt  simple_package_test.html  simple_requirements.txt  simple_test.html  test_python_integration.py
requests/: __init__.py
scripts/: build_python.sh  setup_python_integration.sh  verify_python_integration.sh
tests_python/: README_TESTS.md  index.html  test_basic.html  test_css.html  test_forms.html  test_javascript.html  test_pyscript_benchmark.html  test_python.html  test_python_simple.html  test_requests.py
